--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
 
   "scripts": {
+    "postinstall": "bower install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
 
@@ -25,11 +26,17 @@
     "url": "git://github.com/roundscope/ember-data-elasticsearch-kit.git"
   },
 
-  "devDependencies": [
-    "grunt-contrib-coffee",
-    "grunt-contrib-uglify",
-    "grunt-contrib-jasmine"
-  ],
+  "devDependencies": {
+    "grunt": "~0.4.4",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-jasmine": "~0.6.4",
+    "bower": "~1.3.3"
+  },
+  
+  "peerDependencies": {
+    "grunt-cli": "~0.1.13"
+  },
 
   "engines": {
     "node": ">=v0.10.1"
