--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "grunt-contrib-coffee": "~0.10.1",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-jasmine": "~0.6.4",
+    "grunt-contrib-qunit": "~0.4.0",
+    "grunt-contrib-connect": "~0.7.1",
     "bower": "~1.3.3"
   },
   
