--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-contrib-qunit": "~0.4.0",
     "grunt-contrib-connect": "~0.7.1",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-rerun": "~0.0.4",
     "bower": "~1.3.3"
   },
